@@ -64,8 +64,9 @@ class PhotoList(object):
         cb = cb_arg or self._prepare_cb
         d.addCallback(cb)
 
-    def _start_timer(self, interval=3600):
-        self._timer = gobject.timeout_add(interval * 1000, self.prepare)
+    def _start_timer(self, min=60):
+        min = 10 if min < 10 else min # minimum interval is 10 minutes.
+        self._timer = gobject.timeout_add(min * 60 * 1000, self.prepare)
         return False
 
     def _get_photo_cb(self, data, cb):
