@@ -56,7 +56,8 @@ class FlickrPhotoList(PhotoList):
         if not url: return
 
         self._get_url_with_twisted(url)
-        self._start_timer()
+        interval_min = self.conf.get_int('plugins/flickr/interval', 60)
+        self._start_timer(interval_min)
 
     def _prepare_cb(self, data):
         d = json.loads(data)
