@@ -37,7 +37,9 @@ class PicasaPhotoList(PhotoList):
         if self.username:
             key = Keyring('Google Account', protocol='http')
             key.get_passwd_async(self.username, self._google_auth_cb)
-            self._start_timer()
+
+            interval_min = self.conf.get_int('plugins/picasa/interval', 60)
+            self._start_timer(interval_min)
 
     def _google_auth_cb(self, identity):
         "Get Google Auth Token (ClientLogin)."
